<resources>
    <string name="app_name">job</string>
    <string name="register">注册</string>
    <string name="sendmail">发送验证码</string>
    <string name="login">登录</string>
    <string name="account_hint">请输入用户名</string>
    <string name="registeracc_hint">请输入用户名</string>
    <string name="registerpwd_hint">请输入密码</string>
    <string name="loginpwd_hint">请输入密码</string>
    <string name="loginemail_hint">请输入邮箱</string>
    <string name="loginemailverity_hint">请输入验证码</string>
    <string name="login_url">/app/login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_23_6_30_14_47">23/6/30 14:47</string>
</resources>