<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">



    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingLeft="43dp"
        android:paddingRight="31dp"
        android:layout_marginTop="278dp"
        android:background="#ffffff"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="300dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_marginLeft="42dp"
                    android:src="@drawable/user"
                    android:layout_height="25dp"/>
                <EditText
                    android:id="@+id/register_account"
                    android:layout_width="wrap_content"
                    android:inputType="phone"
                    android:layout_height="wrap_content"
                    android:hint="@string/account_hint"
                    android:textColor="#000000"
                    android:background="@null"
                    android:textColorHint="#bcbcbc"
                    android:layout_marginLeft="20dp"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_marginTop="18dp"
                android:layout_height="1dp"
                android:layout_marginBottom="18dp"
                android:background="#e8e7e7"

                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="28dp"
                    android:layout_marginLeft="42dp"
                    android:src="@drawable/passwd"
                    android:layout_height="28dp"/>
                <EditText
                    android:id="@+id/register_pwd"
                    android:layout_width="wrap_content"
                    android:inputType="textPassword"
                    android:layout_height="wrap_content"
                    android:hint="@string/loginpwd_hint"
                    android:textColor="#000000"
                    android:background="@null"
                    android:textColorHint="#bcbcbc"
                    android:layout_marginLeft="20dp"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_marginTop="18dp"
                android:layout_height="1dp"
                android:layout_marginBottom="18dp"
                android:background="#e8e7e7"

                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="28dp"
                    android:layout_marginLeft="42dp"
                    android:src="@drawable/email"
                    android:layout_height="28dp"/>
                <EditText
                    android:id="@+id/register_email"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:hint="@string/loginemail_hint"
                    android:textColor="#000000"
                    android:background="@null"
                    android:textColorHint="#bcbcbc"
                    android:layout_marginLeft="20dp"
                    />
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_marginTop="18dp"
                android:layout_height="1dp"
                android:layout_marginBottom="18dp"
                android:background="#e8e7e7"

                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="42dp"
                    android:src="@drawable/verity" />
                <EditText
                    android:id="@+id/verity"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:hint="@string/loginemailverity_hint"
                    android:textColor="#000000"
                    android:background="@null"
                    android:textColorHint="#bcbcbc"
                    android:layout_marginLeft="20dp"
                    />
            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/register_verity"
            android:layout_width="match_parent"

            android:text="@string/sendmail"
            android:textSize="24sp"
            android:layout_height="55dp"
            android:background="@drawable/shape_login"
            />
        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/register"
            android:textSize="24sp"
            android:layout_height="55dp"
            android:background="@drawable/shape_register"
            />



    </LinearLayout>

</RelativeLayout>